--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorPrimary"
-    tools:context=".ui.login.LoginActivity">
+    tools:context=".ui.register.RegisterActivity">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -22,11 +22,24 @@
         app:layout_constraintVertical_bias="0.44">
 
         <EditText
+            android:id="@+id/edt_fulname"
+            android:layout_width="match_parent"
+            android:layout_height="48dp"
+            android:background="@drawable/bg_edit_text"
+            android:hint="Full Name"
+            android:inputType="text"
+            android:paddingLeft="@dimen/d16"
+            android:paddingRight="@dimen/d16"
+            android:textColor="@color/white"
+            android:textColorHint="@color/grey9" />
+
+        <EditText
             android:id="@+id/editText"
             android:layout_width="match_parent"
             android:layout_height="48dp"
             android:background="@drawable/bg_edit_text"
             android:hint="Email"
+            android:layout_marginTop="@dimen/d16"
             android:inputType="textEmailAddress"
             android:paddingLeft="@dimen/d16"
             android:paddingRight="@dimen/d16"
@@ -50,14 +63,14 @@
 
 
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_register"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="16dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="24dp"
         android:background="@drawable/btn_login"
-        android:text="Login"
+        android:text="Register"
         android:textAllCaps="false"
         android:textColor="@color/white"
         app:layout_constraintEnd_toEndOf="parent"
@@ -65,7 +78,7 @@
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
     <LinearLayout
-        android:id="@+id/layout_register"
+        android:id="@+id/layout_login"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
@@ -73,12 +86,12 @@
         android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/btn_login">
+        app:layout_constraintTop_toBottomOf="@+id/btn_register">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Not yet registered?"
+            android:text="Already registered?"
             android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
             android:textColor="@color/white" />
 
@@ -87,8 +100,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/d8"
             android:layout_marginStart="@dimen/d8"
-            android:text="Register Now"
+            android:text="Login"
             android:textColor="@color/colorAccent" />
     </LinearLayout>
-
 </android.support.constraint.ConstraintLayout>
