Continue red5pro integration and testing

--- a/app/src/main/res/layout-v21/activity_stream.xml
+++ b/app/src/main/res/layout-v21/activity_stream.xml
@@ -7,8 +7,8 @@
     android:background="@color/colorPrimary"
     tools:context=".ui.streaming.StreamingActivity">
 
-    <TextureView
-        android:id="@+id/textureView"
+    <SurfaceView
+        android:id="@+id/surfaceView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -16,7 +16,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-    </TextureView>
+    </SurfaceView>
 
     <Button
         android:id="@+id/btn_start_stream"
@@ -29,23 +29,8 @@
         android:text="Start LiveStream"
         android:textAllCaps="false"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/textureView"
+        app:layout_constraintBottom_toBottomOf="@+id/surfaceView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-    <Button
-        android:id="@+id/btn_end_stream"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
-        android:layout_marginEnd="16dp"
-        android:layout_marginStart="16dp"
-        android:background="@drawable/btn_login"
-        android:text="End LiveStream"
-        android:visibility="gone"
-        android:textAllCaps="false"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/textureView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
 </android.support.constraint.ConstraintLayout>
